{
    "name": "BowlingInput",
    "maps": [
        {
            "name": "BowlingGampley",
            "id": "bcf25f6d-f6d6-4f0a-bc28-48f85fdf635a",
            "actions": [
                {
                    "name": "DrawDelta",
                    "type": "Value",
                    "id": "65f6808a-d4f9-4294-9550-a55023fdb050",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DrawPosition",
                    "type": "Value",
                    "id": "3912d733-1e76-478d-981a-080284c00204",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PressAction",
                    "type": "Button",
                    "id": "2d99bb8e-ee3b-4cad-b1f3-a3ce13758475",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "85de021f-48ad-413f-9f7b-c4412a701d46",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DrawDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "317238d5-6e75-4694-9a73-d25fe51dc2f3",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DrawDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30e23287-2f7b-4f11-9c8b-dcbd96ba4cd4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DrawDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94505c59-48b4-4bed-b032-a88fb3ce2357",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DrawPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39375556-6b02-4ac2-b5cb-7c90124a6a66",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DrawPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70d35d4b-6883-4855-a5f5-18bd226a4298",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DrawPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7ffecb7-fe37-4b33-88a0-67857b2f49d3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "051146a9-5d67-4df2-98b7-2f0c71ee3308",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd6e3ead-bcb4-4332-bc66-1381f5091706",
                    "path": "<Pointer>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}